# task-assit

./: .env.example  .gitignore  ADMIN_PANEL_QUICKSTART.md  API_DOCUMENTATION.md  API_TESTING.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BULK_OPERATIONS.md  CLEANUP_REPORT.md  DELIVERABLES_CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  Dockerfile  FINAL_ARCHITECTURE.md  FINAL_CLEANUP_REPORT.md  FIXES_SUMMARY.md  GROK_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  LLM_GETTING_STARTED.md  LLM_IMPLEMENTATION_SUMMARY.md  LLM_QUICK_START.md  LLM_README.md  LLM_SETUP_GUIDE.md  PRODUCTION_CHECKLIST.md  PROJECT_COMPLETE.md  QUICK_START.md  QUICK_START_GUIDE.md  README.md  REALTIME_DASHBOARD_UPDATES.md  RENDER_DEPLOYMENT.md  RENDER_FIX.md  SDK_GENERATION.md  SYSTEM_ENHANCEMENT.md  TESTING_REALTIME_UPDATES.md  TEST_INSTRUCTIONS.md  UI_GUIDE.md  UI_IMPLEMENTATION.md  UI_INTEGRATION_COMPLETE.md  (+15 more)
alembic/: env.py
alembic/versions/: 20260201_1311_initial_multi_tenant_schema.py
app/: config.py  database.py  database_utils.py  main.py
app/agents/: __init__.py  base_agent.py  conversation_agent.py  intent_agent.py  memory_agent.py  orchestrator.py  task_agent.py
app/api/: __init__.py  auth.py  chat.py  tasks.py  websocket.py
app/api/v1/: __init__.py
app/core/: __init__.py  caching.py  celery_tasks.py  dependencies.py  docs.py  encryption.py  exceptions.py  monitoring.py  rate_limiting.py  rbac.py  security.py  tenant_context.py  websocket_manager.py
app/llm/: __init__.py  base.py  claude_provider.py  factory.py  gemini_provider.py  grok_provider.py  openai_provider.py
app/middleware/: __init__.py  tenant_middleware.py
app/models/: __init__.py  agent.py  api_key.py  audit.py  audit_log.py  base.py  billing.py  conversation.py  message.py  project.py  provider.py  role.py  session.py  task.py  tenant.py  usage_log.py  user.py
app/schemas/: __init__.py  chat.py  common.py  task.py  user.py
app/services/: __init__.py  auth_service.py  chat_service.py  provider_service.py  task_service.py  tenant_service.py  webhook_service.py
app/services/orchestrator/: __init__.py  agent_manager.py  conversation_manager.py  tool_registry.py  usage_tracker.py
app/services/providers/: __init__.py  adapter.py  anthropic_adapter.py  factory.py  gemini_adapter.py  groq_adapter.py  ollama_adapter.py  (+1 more)
app/static/: index.html
app/utils/: __init__.py  date_parser.py  formatters.py  validators.py
tests/: conftest.py
tests/test_agents/: test_intent_agent.py  test_task_agent.py
tests/test_api/: test_auth.py  test_tasks.py
tests/test_services/: test_orchestrator.py
(+7 files in other folders)
